<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2EBEDF4"
    tools:context=".Fragment.Register">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/home_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/customer_register"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_customer_full_name"
                android:inputType="textPersonName"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#D5CDCD" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_customer_email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#D5CDCD" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_customer_mobile_no"
                android:inputType="number"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#D5CDCD" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/enter_customer_password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#D5CDCD" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/re_password"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="16dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/re_enter_customer_password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:textColor="@color/black"
                android:textColorHint="#D5CDCD" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="16dp"
                android:background="@drawable/button_background"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="16sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>